tests/negative/traits/reimpl.orng
// reimpl.orng:10:5: error: duplicate implementation of trait `My_Trait` for the type `Int`
// impl My_Trait for Int {}
//    ^
// reimpl.orng:10:5: note: other implementation of `My_Trait` here:
// impl My_Trait for Int {}
//    ^
// 
trait My_Trait {}

impl My_Trait for Int {}
impl My_Trait for Int {}

fn main() -> Int { 0 }